--- a/front/src/styles/main.css
+++ b/front/src/styles/main.css
@@ -71,6 +71,15 @@ header {
     border: 0px;
     cursor: pointer;
 }
+.ss1 {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(67, 185, 185);
+    font-size: 70px;
+    text-align: center;
+    border: 0px;
+    cursor: pointer;
+}
 
 .bottom {
     margin-top: 120px;
