--- a/front/src/components/UI/Modal/MyModal.module.css
+++ b/front/src/components/UI/Modal/MyModal.module.css
@@ -14,6 +14,8 @@
     padding: 20px;
     border-radius: 12px;
     background-color: white;
+    max-width: 50%;
+    min-height: 50%;
    
 }
 .modal.active {
