--- a/front/src/styles/main.css
+++ b/front/src/styles/main.css
@@ -15,6 +15,7 @@ header {
     left: 50%;
     transform: translate(-50%);
     display: flex;
+    margin-top: 25px;
 }
 .ulul {
     display: inline;
@@ -26,6 +27,18 @@ header {
     margin-left: 25px;
     margin-right: 25px;
 }
+.lili a {
+    text-decoration: none;
+    color: teal;
+    display: inline-block;
+    border: 1px solid teal;
+    padding: 5px 25px 5px 25px;
+    cursor: pointer;
+}
+.lili a:hover{
+    color: white;
+    background-color: teal;
+}
 .main {
     width: 100%;
     position: relative;
@@ -35,17 +48,17 @@ header {
 .map {
     margin-top: 70px;
     width: 90%;
-    min-height: 800px;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
     display: block;
-    max-height: 800px;
     border: 3px solid black;
+    height: 98vh;
+
 }
 .up {
     width: 100%;
-    height: 340px;
+    height: 240px;
     position: relative;
     display: flex;
 }
@@ -62,19 +75,35 @@ header {
     width: 8%;
     height: 100%;
 }
+.ww {
+    width: 16%;
+    height: 100%;
+}
 .ss {
     width: 15%;
     height: 100%;
-    background-color: rgb(67, 185, 185);
+    background-color: rgba(67, 185, 185, 0.489);
     font-size: 70px;
     text-align: center;
     border: 0px;
     cursor: pointer;
 }
+.sss {
+    width: 15%;
+    height: 100%;
+    background-color: rgba(194, 63, 63, 0.489);
+    font-size: 70px;
+    text-align: center;
+    border: 0px;
+    cursor: pointer;
+}
+.ppp {
+    margin-top: 35%;
+    font-size: 15px;
+}
 .ss1 {
     width: 100%;
     height: 100%;
-    background-color: rgb(67, 185, 185);
     font-size: 70px;
     text-align: center;
     border: 0px;
@@ -84,7 +113,7 @@ header {
 .bottom {
     margin-top: 120px;
     width: 100%;
-    height: 340px;
+    height: 280px;
     display: flex;
 }
 .SingIn {
@@ -97,6 +126,9 @@ header {
 }
 .signin_rigth input{
     font-size: 30px;
+    border: 1px solid teal;
+    color: teal;
+    padding-left: 10px;
 }
 .signin_btn {
     margin-left: 20px;
@@ -113,4 +145,58 @@ header {
 .btn:hover{
     background-color: teal;
     color: white;
+}
+.btn-mini {
+    font-size: 15px;
+    padding: 5px 10px 5px 10px;
+}
+.btn-red {
+    color: red;
+    border: 1px solid red;
+}
+.btn-red:hover {
+    background-color: red;
+    color: white;
+}
+.menu {
+    margin-top: 50px;
+    margin-left: 25px;
+}
+.contentMyModal {
+    font-size: 20px;
+}
+.Booking {
+    display: flex;
+    justify-content: center;
+}
+.BookingRigth {
+    margin-left: 10px;
+}
+.BookingRigth input {
+    font-size: 16px;
+}
+.allBooking {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+
+}
+.allBooking_lf {
+}
+.allBooking_lf div {
+    margin-top: 3px;
+}
+.allBooking_rg {
+    margin-left: 15px;
+}
+.allBooking_rg textarea {
+    resize: none;
+    font-size: 16px;
+    height: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.allBooking_btn {
+    display: block;
+    margin-left: 10px;
 }
