--- a/front/src/components/UI/Modal/MyModal.module.css
+++ b/front/src/components/UI/Modal/MyModal.module.css
@@ -9,13 +9,18 @@
     align-items: center;
     justify-content: center;
     transform: scale(0);
+    
 }
 .modal__content {
     padding: 20px;
     border-radius: 12px;
     background-color: white;
-    max-width: 50%;
+    min-width: 40%;
+    max-width: 70%;
     min-height: 50%;
+    max-height: 70%;
+    border: 1px solid black;
+    overflow-y: auto;
    
 }
 .modal.active {
