--- a/front/src/styles/main.css
+++ b/front/src/styles/main.css
@@ -150,6 +150,10 @@ header {
     font-size: 15px;
     padding: 5px 10px 5px 10px;
 }
+.btn-mini-min {
+    font-size: 18px;
+    padding: 1px 5px 1px 5px;
+}
 .btn-red {
     color: red;
     border: 1px solid red;
@@ -199,4 +203,48 @@ header {
 .allBooking_btn {
     display: block;
     margin-left: 10px;
+}
+.OrderList {
+    font-size: 15px;
+}
+.OrderItem {
+    display: flex;
+
+}
+.OrderItem_item_lf {
+    width: 65%;
+    text-align: left;
+    padding-left: 5px;
+}
+.OrderItem_item_rg {
+    width: 35%;
+    margin-left: 10px;
+    text-align: right;
+    padding-right: 5px;
+}
+.LookSession {
+    font-size: 18px;
+}
+.addMenu {
+    border: 1px solid teal;
+}
+.menuItem_oo {
+    font-size: 15px;
+}
+.menuItem_oo_aa {
+    display: flex;
+}
+
+.OrderItem_item_lf_mm {
+    width: 72%;
+    text-align: left;
+    padding-left: 5px;
+}
+.OrderItem_item_rg_mm {
+    width: 20%;
+    text-align: right;
+    padding-right: 5px;
+}
+.OrderItem_item_btn_mm {
+    width: 8%;
 }
